# RP2040-SHT40

./: .gitignore  CMakeLists.txt  README.md  main.c  main.h
sht40/: sensirion_hw_i2c_implementation.c
